# mediaFlow

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SPEC.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/app/ai/: __init__.py  anthropic.py  base.py  openai.py
backend/app/api/routes/: __init__.py  generate.py  jobs.py
backend/app/api/schemas/: __init__.py  requests.py  responses.py
backend/app/personas/: __init__.py  models.py  presets.py  storage.py  validation.py
backend/app/pipeline/: __init__.py  context.py  models.py  orchestrator.py  states.py
backend/app/providers/: __init__.py  exceptions.py
backend/app/providers/tts/: __init__.py  base.py  minimax.py
backend/app/renderer/: __init__.py  captions.py  engine.py  filters.py  manifest.py  spec.py  timing.py
backend/app/repositories/: __init__.py
backend/app/repositories/jobs/: __init__.py  base.py  error.py  json.py  paths.py
backend/app/routers/: __init__.py  generate.py  posts.py  projects.py  templates.py  transcripts.py
backend/app/services/: __init__.py  generator.py  preprocessor.py  ranker.py
backend/app/services/minimax/: __init__.py  adapters.py  client.py  exceptions.py  inspector.py  models.py  normalize.py  polling.py  storage.py
backend/mediaflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_generator.py  test_minimax.py  test_personas.py  test_pipeline.py  test_preprocessor.py  test_renderer.py  test_timing.py
frontend/: next.config.js  package-lock.json  package.json
(+10 files in other folders)
